# provaProgetto

./: CMakeLists.txt  main.cpp
include/: Device.h  ManualDevice.h  frigorifero.h
src/: Device.cpp  ManualDevice.cpp  frigorifero.cpp
